# Myn-Programming-Language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  guide.txt  myn.config  run.sh  test.myn
docs/: myn.g4
include/: lexer.h  lexer.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parser.cpp
test/: test.cpp  test.myn  tests
